# GenAI-WK1

./: .env-sample  .gitignore  LICENSE  README.md  config.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py  util.py
